# flows-ia-docker-starter-with-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.gpu  ENTREGA_RURAL_v2.md  Makefile  README.md  RUNNING.md  apply_rural_v2_patch.py  docker-compose.yml  environment.gpu.yml  environment.yml  pyproject.toml  requirements.txt  run_rural.py
.github/workflows/: ci.yml
config/: config.yaml
config/cities/: _template_city.yaml  londrina.yaml
scripts/: entrypoint.sh
src/: main.py
src/agents/: orchestrator.py
src/api/: main.py
src/cli/: __main__.py
src/cli_rural/: __main__.py
src/cli_scorecard/: __main__.py
src/common/: __init__.py  tools.py  utils.py
src/pipelines/: assistencia_pipeline.py  crawl_layers.py  educacao_pipeline.py  export_db_pipeline.py  ibge_setores_pipeline.py  ingest_city.py  osm_viario_pipeline.py  proxy_fluxo_pipeline.py  regioes_bairros_pipeline.py  rural_priority.py  saude_pipeline.py  servicos_municipais_pipeline.py  traffic_metrics.py  traffic_scorecard.py  transporte_pipeline.py  validacao_qa_pipeline.py  zoneamento_pipeline.py
src/services/: arcgis_discovery.py  sources_ai.py  sources_arcgis.py  sources_osm.py
src/ui/: interactive.py
src/utils/: geoio.py  geomath.py  io.py  norm.py  poi_weights.py
