[project]
name = "flows-ia"
version = "0.1.0"
description = "Pipeline IA para Fluxo de Pessoas (UrbaniX Group)"
requires-python = ">=3.11"
authors = [{name="UrbaniX Group"}]
readme = "README.md"

[project.scripts]
flows-ia = "src.cli.__main__:main"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
